--- a/index.html
+++ b/index.html
@@ -84,3 +84,30 @@ html_code = """
 """
 
 display(HTML(html_code))
+<section id="products">
+    <h2>우리의 제품</h2>
+    <div class="product">
+        <h3>제품 A</h3>
+        <p>설명: 고급 제품 A입니다. 최고의 품질을 자랑합니다.</p>
+        <p>가격: 10,000원</p>
+        <button onclick="addToCart('제품 A')">구매하기</button>
+    </div>
+    <div class="product">
+        <h3>제품 B</h3>
+        <p>설명: 고급 제품 B입니다. 우수한 내구성을 가지고 있습니다.</p>
+        <p>가격: 20,000원</p>
+        <button onclick="addToCart('제품 B')">구매하기</button>
+    </div>
+    <div class="product">
+        <h3>제품 C</h3>
+        <p>설명: 고급 제품 C입니다. 편안한 사용감을 제공합니다.</p>
+        <p>가격: 30,000원</p>
+        <button onclick="addToCart('제품 C')">구매하기</button>
+    </div>
+    <div class="product">
+        <h3>제품 D</h3>
+        <p>설명: 고급 제품 D입니다. 뛰어난 성능을 자랑합니다.</p>
+        <p>가격: 40,000원</p>
+        <button onclick="addToCart('제품 D')">구매하기</button>
+    </div>
+</section>
